Change Log for OpenXava project
===============================

- Added documentation about overwriting go list action to reference guide (controllers chapter).
- Fix: Overwriting the go list action, the Mode.list action via mode-controller, does not work.
- Fix: Actions added/removed via addActions()/removeActions() to the module are lost after closing a dialog.
- Fix: Read only reference to an entity with a single reference as key which is not included in the view fails.
- Fix: IMAGES_GALLERY stores all the images in the default catalog with MySQL.
- Fix: XHibernate.setDefaultSchema() does not work for MySQL.
- Fix: Mark for required and error not shown for MEMO/TEXT_AREA stereotype and enums.
- Fix: List title overlapped with filters combo when it is too large with Light theme.
- Fix: When section tabs overflow screen size alter their positions on changing section.

OpenXava 6.1.1 (2019-5-13)
--------------------------
- First module page load is done via AJAX.
- Source code migrated to GitHub (https://github.com/openxava/openxava).
- New openxava.base.dir property available in build.xml to have OpenXava/Addons in a different folder.
- Fix: New action executes the @OnChange actions from properties not defined in the view.
- Fix: Radio buttons are not displayed.
- Fix: The tooltip for HTML_TEXT in list does not show the whole field content. 
- Fix: updateSchema produces an error of user and password not specified.
- Fix: updateOX fails to update the Addons jar in windows from time to time.
- Fix: XPersistence.setDefaultSchema() does not work with MySQL.
- Fix: Labels.put() does not work.
- Fix: Some details in the course are not adapted to recent versions. 
- Fix: Tab.setBaseCondition() on change module keeps the last user condition in that module.
- Fix: Tab.setBaseCondition() does not take effect on change module until clicking on filter button.
- Fix: Tab.setBaseCondition() does not change the current filtering configuration in combo.