@@ -1,16 +1,5 @@
-/application.xml
-/code-generators.xml
-/controllers.xml
-/converters.xml
-/default-size.xml
-/dtds/
-/org/
 /GalleryImage.hbm.xml
 /META-INF/
-/editors.xml
-/stereotype-type-default.xml
-/tabs-default-values.xml
-/validators.xml
 /OpenXavaTest-labels_ca.properties
 /OpenXavaTest-labels_en.properties
 /OpenXavaTest-labels_es.properties
@@ -19,17 +8,18 @@
 /OpenXavaTest-messages_en.properties
 /OpenXavaTest-messages_es.properties
 /OpenXavaTest-messages_fr.properties
+/application.xml
+/code-generators.xml
+/controllers.xml
+/converters.xml
+/default-size.xml
+/dtds/
+/editors.xml
 /hibernate-junit.cfg.xml
 /hibernate.cfg.xml
+/org/
 /portlets/
 /BeansContext.properties
-/LoginContextFactory.properties
-/jndi-jboss.properties
-/jndi-websphere.properties
-/jndi.properties
-/logging.properties
-/naviox-users.properties
-/naviox.properties
 /Corporation.html
 /CorporationEmployee.html
 /Customer.jrxml
@@ -37,6 +27,13 @@
 /Images.jrxml
 /Invoice.jrxml
 /InvoiceNoVAT.jrxml
+/LoginContextFactory.properties
 /Products.jrxml
+/jndi-jboss.properties
+/jndi-websphere.properties
+/jndi.properties
+/logging.properties
+/naviox-users.properties
+/naviox.properties
 /xava-junit.properties
 /xava.properties
