@@ -1,6 +1,7 @@
 Change Log for OpenXava project
 ===============================
 
+- Fix: Calendar icon covers up the name of the action when user as action icon. 
 - Added documentation about overwriting go list action to reference guide (controllers chapter).
 - Fix: Overwriting the go list action, the Mode.list action via mode-controller, does not work.
 - Fix: Actions added/removed via addActions()/removeActions() to the module are lost after closing a dialog.
